# Operiva

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/entities/: email_verification_token.rs  membership.rs  mod.rs  organization.rs  user.rs
crates/domain/src/value_objects/: email.rs  mod.rs  names.rs  password.rs  role.rs  slug.rs  token_hash.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
migrations/: 20260511120000_initial_schema.sql
