[package]
name = "api"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain = { path = "../domain", features = ["serde"] }
application = { path = "../application" }
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
