[package]
name = "application"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }
thiserror.workspace = true
async-trait.workspace = true
time.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
