[package]
name = "infrastructure"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain = { path = "../domain", features = ["serde"] }
application = { path = "../application" }
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
zeroize.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true

[dev-dependencies]
wiremock.workspace = true
