[package]
name = "server"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain", features = ["serde"] }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
api = { path = "../api" }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true
serde.workspace = true
sqlx.workspace = true
